# wasm_bindgend_event_coordinates_issue

./: Cargo.toml  package-lock.json  webpack.config.js
js/: index.js
src/: lib.rs
