# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "^0.2", features = ["serde-serialize"]}
js-sys = "^0.3.44"
console_error_panic_hook = "^0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'DomRect',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'PointerEvent',
  'MouseEvent',
  'Node',
  'Window',
]
